--- a/index.html
+++ b/index.html
@@ -14,21 +14,27 @@
         </nav>
     </header>
 
+    <!-- Cuadro de búsqueda -->
+    <div class="mt-3">
+        <input type="text" id="search-input" placeholder="Buscar película...">
+        <button onclick="searchMovies()">Buscar</button>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="col-md-3">
                 <!-- Barra lateral con opciones de filtro -->
-                <h4>Filtrar por Género</h4>
+                <h4>Filtrar por Categoría</h4>
                 <ul class="list-group">
-                    <li class="list-group-item">Acción</li>
-                    <li class="list-group-item">Comedia</li>
-                    <li class="list-group-item">Drama</li>
-                    <!-- Otras opciones de género -->
+                    <li class="list-group-item filter-item" data-category="popular">Popular</li>
+                    <li class="list-group-item filter-item" data-category="top_rated">Más valoradas</li>
+                    <li class="list-group-item filter-item" data-category="upcoming">Próximas</li>
+                    <!-- Otras opciones de categoría -->
                 </ul>
             </div>
             <div class="col-md-9">
                 <!-- Lista de películas -->
-                <ul id="movies-list"></ul>
+                <div class="row" id="movies-list"></div> <!-- Cambio 'ul' por 'div' para contener las cards -->
             </div>
         </div>
     </div>
