--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/script.js"></script> <!-- Archivo JavaScript para la lógica de la API -->
+
 </head>
 <body>
     <header>
@@ -17,7 +21,7 @@
     <!-- Cuadro de búsqueda -->
     <div class="mt-3">
         <input type="text" id="search-input" placeholder="Buscar película...">
-        <button onclick="searchMovies()">Buscar</button>
+        <button id="search-button">Buscar</button> <!-- Asignamos un ID al botón -->
     </div>
 
     <div class="container">
@@ -42,7 +46,3 @@
     <footer class="bg-dark text-white text-center py-3">
         <!-- Contenido del pie de página -->
     </footer>
-
-    <script src="/script.js"></script> <!-- Archivo JavaScript para la lógica de la API -->
-</body>
-</html>
