--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-md-3">
                 <!-- Barra lateral con opciones de filtro -->
-                <h4>Filtrar por Categoría</h4>
+                <h4>Filtrar por Categorías</h4>
                 <ul class="list-group">
                     <li class="list-group-item filter-item" data-category="popular">Popular</li>
                     <li class="list-group-item filter-item" data-category="top_rated">Más valoradas</li>
