se agrega card, cambio de lenguaje de la api, correcion de detalle.js

--- a/detalle.html
+++ b/detalle.html
@@ -25,6 +25,15 @@
         </div>
     </div>
 
+    <!-- Botón para volver al inicio -->
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-12">
+                <button id="back-to-home-button" class="btn btn-primary">Volver al inicio</button>
+            </div>
+        </div>
+    </div>
+
     <footer class="bg-dark text-white text-center py-3">
         <!-- Contenido del pie de página -->
     </footer>
