--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Buscador de Películas</a>
+            <a class="navbar-brand">Buscador de Películas</a>
+            <a class="nav-link navbar-brand" href="favorites.html">Favoritos</a>
+
             <!-- Menú de navegación aquí -->
         </nav>
     </header>
