correcion de detalles y nuevo diseño de la card

--- a/detalle.html
+++ b/detalle.html
@@ -16,11 +16,20 @@
 
     <div class="container mt-3">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
+                <!-- Imagen de la película -->
+                <img id="movie-poster" src="" alt="Movie Poster">
+            </div>
+            <div class="col-md-6">
+                <!-- Detalles de la película -->
                 <h2 id="movie-title"></h2>
-                <p id="movie-release-date"></p>
                 <p id="movie-overview"></p>
-                <div id="movie-cast"></div>
+                <p id="movie-release-date"></p>
+                <p id="movie-tmdb"></p>
+                <p id="movie-genres"></p>
+                <p id="movie-audio"></p>
+                <p id="movie-director"></p>
+                <p id="movie-cast"></p>
             </div>
         </div>
     </div>
