--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/script.js"></script> <!-- Archivo JavaScript para la lógica de la API -->
-
+    <style>
+        /* Aquí va el contenido del archivo style.css */
+        /* ... */
+    </style>
 </head>
 <body>
     <header>
