--- a/detalle.html
+++ b/detalle.html
@@ -9,19 +9,16 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">Página de Películas</a>
-            <!-- Menú de navegación aquí -->
+            <a class="navbar-brand" href="#">Info</a>
         </nav>
     </header>
 
     <div class="container mt-3">
         <div class="row">
             <div class="col-md-6">
-                <!-- Imagen de la película -->
                 <img id="movie-poster" src="" alt="Movie Poster">
             </div>
             <div class="col-md-6">
-                <!-- Detalles de la película -->
                 <h2 id="movie-title"></h2>
                 <p id="movie-overview"></p>
                 <p id="movie-release-date"></p>
@@ -33,8 +30,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Botón para volver al inicio -->
     <div class="container mt-3">
         <div class="row">
             <div class="col-md-12">
@@ -44,9 +39,8 @@
     </div>
 
     <footer class="bg-dark text-white text-center py-3">
-        <!-- Contenido del pie de página -->
     </footer>
 
-    <script src="/detalle.js"></script> <!-- Archivo JavaScript para mostrar los detalles de la película -->
+    <script src="/detalle.js"></script> 
 </body>
 </html>
